# parties

./: CMakeLists.txt  Party.c  Party.h  main.c  member.c  member.h
